<resources>
    <string name="app_name" translatable="false">EasyGrow</string>

    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_sanitary" translatable="false">SanitaryActivity</string>
    <string name="title_type_selection" translatable="false">Type Selection</string>

    <string name="title_profile">Perfil</string>
    <string name="title_dose">Dosis</string>
    <string name="title_statistics">Estadísticas</string>
    <string name="i_am_a_sanitary">Soy sanitario</string>
    <string name="i_am_a_patient">Soy paciente</string>
    <string name="welcome_title">Bienvenido a EasyGrow</string>
    <string name="welcome_subtitle">¿Cómo vas a usar la aplicación?</string>
    <string name="logout">Salir</string>
    <string name="patient_picture">Foto del paciente</string>
    <string name="full_name_format" translatable="false">%s %s</string>
    <string name="height_cm_format" translatable="false">%d cm</string>
    <string name="years_format">%d años</string>
    <string name="weight_format" translatable="false">%.1f kg</string>
    <string name="dose_item_dose">Dosis: %.2f ml</string>
    <string name="dose_item_remaining_pens">Plumas: %d</string>
    <string name="arm_l">brazo izqd.</string>
    <string name="arm_r">brazo dcho.</string>
    <string name="leg_l">pierna izqd.</string>
    <string name="leg_r">pierna dcha.</string>
    <string name="abd_l">abdomen izqd.</string>
    <string name="abd_r">abdomen dcho.</string>
    <string name="remaining_doses">Dosis restantes: %d</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Login</string>
    <string name="invalid_password">La contraseña debe tener al menos 8 caracteres</string>
    <string name="login_failed">"Login incorrecto"</string>
    <string name="patient_name">Nombre</string>
    <string name="patient_surname">Apellidos</string>
    <string name="patient_age">Edad</string>
    <string name="patient_height">Estatura</string>
    <string name="patient_weight">Peso</string>
    <string name="submit">Enviar</string>
    <string name="modify">Modificar</string>
    <string name="create">Crear</string>
    <string name="title_profile_update">Datos del paciente</string>
    <string name="edit">Editar</string>
    <string name="kg" translatable="false">kg</string>
    <string name="cm" translatable="false">cm</string>
    <string name="patients_tab">Mis pacientes</string>
    <string name="drugs_tab">Fármacos</string>
    <string name="login">Login</string>
    <string name="title_sign_up">Registro</string>
    <string name="sign_up">Registrarme</string>
    <string name="prompt_surname">Apellidos</string>
    <string name="prompt_name">Nombre</string>
    <string name="sign_up_failed">Registro fallido</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_missing_patient_data_body">Es importante que completes todos tus datos. ¿Quieres hacerlo ahora?</string>
    <string name="accept">Aceptar</string>
    <string name="dialog_missing_patient_data_title">Faltan datos por completar</string>
    <string name="patient_birthday"> día / mes / año</string>
    <string name="patient_birthday_title">Fecha de nacimiento</string>
    <string name="patient_measures_title">Medidas</string>
    <string name="invalid_value">Valor incorrecto</string>
    <string name="name_surname" translatable="false">%s %s</string>
    <string name="search_patient">Buscar paciente</string>
    <string name="new_drug">Nuevo fármaco</string>
    <string name="drug_name">Nombre</string>
    <string name="drug_pharmacy">Farmacéutica</string>
    <string name="drug_concentration_title">Concentración del fármaco</string>
    <string name="drug_mass">Masa</string>
    <string name="mg" translatable="false">mg</string>
    <string name="ml" translatable="false">ml</string>
    <string name="drug_volume">Volumen</string>
    <string name="drug_url">Enlace ficha técnica</string>
    <string name="cartridge_volume">Volumen del cartucho</string>
    <string name="drug_link">Enlace ficha técnica</string>
    <string name="create_new_drug">Nuevo fármaco</string>
    <string name="missing_drug_url">Url no disponible.  Actualiza la información del fármaco.</string>
    <string name="update_drug">Modificar fármaco</string>
    <string name="update">Modificar</string>
    <string name="drug">Fármaco</string>
    <string name="title_new_pens">Nuevas plumas</string>
    <string name="update_treatment_disclaimer">Atención: SI modificas el fármaco se resetearán las plumas del paciente.</string>
    <string name="update_treatment_title">Ajuste del tratamiento</string>
    <string name="update_treatment_body">A continuación podrás ajustar el tratamiento del paciente y asignarle nuevas plumas.</string>
    <string name="dialog_remove_patient_title">Desasignar paciente</string>
    <string name="dialog_remove_patient_body">Vas a eliminar a %s de tu lista de pacientes. ¿Quieres continuar?</string>
    <string name="dialog_remove_durg_title">Eliminar fármaco</string>
    <string name="dialog_remove_drug_body">Vas a eliminar %s del listado de fármacos. ¿Quieres continuar?</string>
    <string name="dialog_no_available_dosis_title">Tu pluma está vacía</string>
    <string name="dialog_no_available_dosis_body">Para poder continuar debes usar una nueva pluma. ¿Quieres cargar una nueva?</string>
    <string name="load_new_pens">Cargar nueva pluma</string>
    <string name="dialog_no_pens_title">No tienes más plumas disponibles</string>
    <string name="dialog_no_pens_body">Acude a tu doctor para que te haga entrega de nuevas plumas para tu tratamiento.</string>
    <string name="reminder">Recordatorio</string>
    <string name="title_reminder">Recordatorio</string>
    <string name="title_treatment_update">Tratamiento</string>
    <string name="title_sanitary_tabs">Sanitario</string>
    <string name="title_patient_search">Búsqueda de pacientes</string>
    <string name="title_drug_update">Datos del fármaco</string>
    <string name="title_drug_details">Fármaco</string>
    <string name="hour_format" translatable="false">%02d : %02d</string>
    <string name="single_hour_format" translatable="false">%02d</string>
    <string name="activate_reminder">Activar recordatorio</string>
    <string name="choose_reminder_time">Elige la hora del recordatorio</string>
    <string name="channel_description">Canal para administrar recordatorios</string>
    <string name="notification_title">Es hora de tu medicación</string>
    <string name="notification_text">No olvides administrar tu dosis diaria</string>
    <string name="invalid_email">Introduce un correo electrónico válido.</string>
    <string name="invalid_surname">Introduce un apellido</string>
    <string name="invalid_name">Introduce un nombre</string>
    <string name="no_patients_message_title">Aún no has agregado ningún paciente.</string>
    <string name="no_patients_message_subtitle">Usa el botón + para agregar nuevos pacientes.</string>
    <string name="sanitary">Sanitario</string>
    <string name="no_drugs_message_title">Aún no has agregado ningún fármaco.</string>
    <string name="no_drugs_message_subtitle">Usa el botón +  para dar de alta nuevos fármacos.</string>
    <string name="patient_added_correctly">%s se ha agregado correctamente</string>
    <string name="no_patients_for_search_message_title">Actualmente no hay más usuarios disponibles o no cumplen el patrón de búsqueda.</string>
    <string name="without_treatment">Sin tratamiento</string>
    <string name="no_administrations_message_title">Aún no hay administraciones registradas.</string>
    <string name="current_height_title">Tu estatura actual es</string>
    <string name="general_stats_title">Estadísticas generales</string>
    <string name="used_pens">Pluma usadas</string>
    <string name="h" translatable="false">h</string>
    <string name="administration_average_time">Hora media de administración</string>
    <string name="total_growth_stat_title">Estatura total ganada</string>
    <string name="last_12_months_height">Has crecido %d cm en los últimos 12 meses.</string>
    <string name="year_progress_title">Progreso en el %d</string>
</resources>