<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dariomartin.easygrow.ui.patient.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_profile_update"
            app:destination="@id/navigation_profile_update" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_update"
        android:name="com.dariomartin.easygrow.ui.patient.profile.ProfileUpdateFragment"
        android:label="@string/title_profile_update"
        tools:layout="@layout/fragment_profile_update" />

    <fragment
        android:id="@+id/navigation_dose"
        android:name="com.dariomartin.easygrow.ui.patient.dose.DoseFragment"
        android:label="@string/title_dose"
        tools:layout="@layout/fragment_dose" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.dariomartin.easygrow.ui.patient.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>