<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eg_purple_3"
    android:padding="@dimen/spacing_m"
    tools:context=".ui.patient.profile.ProfileFragment">

    <ImageView
        android:id="@+id/patient_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:background="@drawable/circle"
        android:contentDescription="@string/patient_picture"
        android:cropToPadding="true"
        android:padding="@dimen/image_circle_stroke_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/patient_picture">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_surname"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xxs"
        android:layout_marginTop="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_xxs"
        app:layout_constraintEnd_toStartOf="@id/weightInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout"
        app:suffixText="@string/cm"
        app:suffixTextColor="@color/eg_purple_2">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_height"
            android:inputType="number"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/heightInputLayout"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout"
        app:suffixText="@string/kg"
        app:suffixTextColor="@color/eg_purple_2">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_weight"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/submit_button"
        style="@style/EGButton.Secondary"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/spacing_xxl"
        android:layout_marginTop="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_xxl"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heightInputLayout"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>