<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_m"
    tools:context=".presentation.sanitary.treatmentupdate.TreatmentUpdateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/drugInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/drug_autocomplete"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="0"
            android:focusableInTouchMode="true"
            android:hint="@string/drug"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/doseInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drugInputLayout"
        app:suffixText="@string/ml"
        app:suffixTextColor="@color/eg_purple_2">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_dose"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/available_pens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:fontFamily="sans-serif"
        android:text="@string/dose_item_remaining_pens"
        android:textColor="@color/eg_purple_2"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doseInputLayout" />

    <ImageView
        android:id="@+id/add_pen"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="@dimen/spacing_xxs"
        android:layout_marginStart="@dimen/spacing_m"
        android:src="@drawable/ic_add"
        app:layout_constraintStart_toEndOf="@id/available_pens"
        app:layout_constraintBottom_toBottomOf="@id/available_pens"
        app:layout_constraintTop_toTopOf="@id/available_pens"
        app:tint="@color/eg_green" />

    <TextView
        android:id="@+id/submit_button"
        style="@style/EGButton.Secondary"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/spacing_xxl"
        android:layout_marginTop="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_xxl"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/available_pens"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>