<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.patient.HomeFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/kid2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxl_2"
        android:layout_marginTop="@dimen/spacing_xl"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xxl_2"
        android:fontFamily="sans-serif-thin"
        android:text="@string/welcome_subtitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/sanitary_button"
        style="@style/EGButton.Primary"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_xxl"
        android:layout_marginBottom="@dimen/spacing_s"
        android:text="@string/i_am_a_sanitary"
        app:layout_constraintBottom_toTopOf="@id/patient_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/patient_button"
        style="@style/EGButton.Primary"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/spacing_xxl"
        android:layout_marginTop="@dimen/spacing_s"
        android:layout_marginEnd="@dimen/spacing_xxl"
        android:text="@string/i_am_a_patient"
        app:layout_constraintBottom_toBottomOf="@id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sanitary_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_s"
        android:fontFamily="sans-serif-light"
        android:padding="@dimen/spacing_xxs"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>